Bug 181431 - kopete crash on reconnecting on wml
Summary: kopete crash on reconnecting on wml
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 176586 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-01-20 22:11 UTC by manolis
Modified: 2009-01-21 00:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description manolis 2009-01-20 22:11:55 UTC
Version:           trunk 6jan09 (using Devel)
Compiler:          gcc 
OS:                Linux
Installed from:    Compiled sources

Application: Kopete (kopete), signal SIGSEGV
0x00007f985620adc1 in nanosleep () from /lib/libc.so.6
[Current thread is 0 (LWP 16542)]

Thread 5 (Thread 0x7f9847aef950 (LWP 16746)):
#0  0x00007f9857a8fdb9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f9857d000b3 in QWaitCondition::wait () from /usr/lib64/qt4/libQtCore.so.4
#2  0x00007f985909c434 in ?? () from /usr/lib64/qt4/libQtNetwork.so.4
#3  0x00007f9857cff76f in ?? () from /usr/lib64/qt4/libQtCore.so.4
#4  0x00007f9857a8c007 in start_thread () from /lib/libpthread.so.0
#5  0x00007f985623b38d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7f984137d950 (LWP 16771)):
#0  0x00007f9857a9003d in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f9845917fd1 in ?? () from /usr/lib64/libxine.so.1
#2  0x00007f9857a8c007 in start_thread () from /lib/libpthread.so.0
#3  0x00007f985623b38d in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f9840b7c950 (LWP 16772)):
#0  0x00007f9856234a92 in select () from /lib/libc.so.6
#1  0x00007f9857e4cc1e in QEventDispatcherUNIX::select () from /usr/lib64/qt4/libQtCore.so.4
#2  0x00007f9857e4e745 in QEventDispatcherUNIXPrivate::doSelect () from /usr/lib64/qt4/libQtCore.so.4
#3  0x00007f9857e4f4ed in QEventDispatcherUNIX::processEvents () from /usr/lib64/qt4/libQtCore.so.4
#4  0x00007f9857e1b9b2 in QEventLoop::processEvents () from /usr/lib64/qt4/libQtCore.so.4
#5  0x00007f9857e1be4d in QEventLoop::exec () from /usr/lib64/qt4/libQtCore.so.4
#6  0x00007f9857cfbbb8 in QThread::exec () from /usr/lib64/qt4/libQtCore.so.4
#7  0x00007f9845b752c2 in Phonon::Xine::XineThread::run (this=0x1018d30) at /home/public/portage/tmp/portage/media-sound/phonon-9999/work/phonon-9999/xine/xinethread.cpp:143
#8  0x00007f9857cff76f in ?? () from /usr/lib64/qt4/libQtCore.so.4
#9  0x00007f9857a8c007 in start_thread () from /lib/libpthread.so.0
#10 0x00007f985623b38d in clone () from /lib/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f9832d50950 (LWP 16817)):
#0  0x00007f9857a9003d in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f9845917fd1 in ?? () from /usr/lib64/libxine.so.1
#2  0x00007f9857a8c007 in start_thread () from /lib/libpthread.so.0
#3  0x00007f985623b38d in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f985ba27750 (LWP 16542)):
[KCrash Handler]
#5  Connection::flapSequence (this=0x0) at /home/public/portage/tmp/portage/kde-base/kopete-9999/work/kopete/kopete/protocols/oscar/liboscar/connection.cpp:132
#6  0x00007f9846b506cc in RateClassManager::transferReady (this=0x20898d0, t=0x2858cd0)
    at /home/public/portage/tmp/portage/kde-base/kopete-9999/work/kopete/kopete/protocols/oscar/liboscar/rateclassmanager.cpp:125
#7  0x00007f9846b80fe9 in StageTwoLoginTask::onGo (this=0x159d070) at /home/public/portage/tmp/portage/kde-base/kopete-9999/work/kopete/kopete/protocols/oscar/liboscar/tasks/logintask.cpp:176
#8  0x00007f9846b3a8dd in Client::qt_metacall (this=0xc4be00, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff63b79cd0)
    at /home/public/portage/tmp/portage/kde-base/kopete-9999/work/kopete_build/kopete/protocols/oscar/liboscar/client.moc:217
#9  0x00007f9857e35d54 in QMetaObject::activate () from /usr/lib64/qt4/libQtCore.so.4
#10 0x00007f9846b5c168 in Connection::qt_metacall (this=0xac97b0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff63b79dd0)
    at /home/public/portage/tmp/portage/kde-base/kopete-9999/work/kopete_build/kopete/protocols/oscar/liboscar/connection.moc:79
#11 0x00007f9857e35d54 in QMetaObject::activate () from /usr/lib64/qt4/libQtCore.so.4
#12 0x00007f9846b4a140 in ClientStream::qt_metacall (this=0xad3710, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff63b79ed0)
    at /home/public/portage/tmp/portage/kde-base/kopete-9999/work/kopete_build/kopete/protocols/oscar/liboscar/oscarclientstream.moc:85
#13 0x00007f9857e35d54 in QMetaObject::activate () from /usr/lib64/qt4/libQtCore.so.4
#14 0x00007f98590b5e9e in ?? () from /usr/lib64/qt4/libQtNetwork.so.4
#15 0x00007f98590b7340 in ?? () from /usr/lib64/qt4/libQtNetwork.so.4
#16 0x00007f98590ba04a in QAbstractSocket::waitForConnected () from /usr/lib64/qt4/libQtNetwork.so.4
#17 0x00007f98590bacbb in QAbstractSocket::waitForDisconnected () from /usr/lib64/qt4/libQtNetwork.so.4
#18 0x00007f9846b4a997 in ~ClientStream (this=0xad3710) at /home/public/portage/tmp/portage/kde-base/kopete-9999/work/kopete/kopete/protocols/oscar/liboscar/oscarclientstream.cpp:94
#19 0x00007f9846b5bb0d in ~Connection (this=0xac97b0) at /home/public/portage/tmp/portage/kde-base/kopete-9999/work/kopete/kopete/protocols/oscar/liboscar/connection.cpp:71
#20 0x00007f9857e2eb8d in QObject::event () from /usr/lib64/qt4/libQtCore.so.4
#21 0x00007f9856def49d in QApplicationPrivate::notify_helper () from /usr/lib64/qt4/libQtGui.so.4
#22 0x00007f9856df0b1a in QApplication::notify () from /usr/lib64/qt4/libQtGui.so.4
#23 0x00007f98589e6c8b in KApplication::notify (this=0x7fff63b7ae40, receiver=0xac97b0, event=0x18b9980)
    at /home/public/portage/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kdeui/kernel/kapplication.cpp:307
#24 0x00007f9857e1cd6e in QCoreApplication::notifyInternal () from /usr/lib64/qt4/libQtCore.so.4
#25 0x00007f9857e2118f in QCoreApplicationPrivate::sendPostedEvents () from /usr/lib64/qt4/libQtCore.so.4
#26 0x00007f9857e4f480 in QEventDispatcherUNIX::processEvents () from /usr/lib64/qt4/libQtCore.so.4
#27 0x00007f9856e9413a in ?? () from /usr/lib64/qt4/libQtGui.so.4
#28 0x00007f9857e1b9b2 in QEventLoop::processEvents () from /usr/lib64/qt4/libQtCore.so.4
#29 0x00007f9857e1be4d in QEventLoop::exec () from /usr/lib64/qt4/libQtCore.so.4
#30 0x00007f9857e214af in QCoreApplication::exec () from /usr/lib64/qt4/libQtCore.so.4
#31 0x000000000044838c in main (argc=3, argv=0x7fff63b7bbf8) at /home/public/portage/tmp/portage/kde-base/kopete-9999/work/kopete/kopete/kopete/main.cpp:102
Comment 1 Pino Toscano 2009-01-20 22:54:07 UTC
Aren't you sure you were connecting to AIM/ICQ?
Comment 2 Roman Jarosz 2009-01-20 23:55:21 UTC
SVN commit 914355 by rjarosz:

Fix crash during ICQ/AIM disconnection.

BUG: 181431



 M  +3 -0      connection.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=914355
Comment 3 Roman Jarosz 2009-01-20 23:56:23 UTC
SVN commit 914356 by rjarosz:

Backport commit 914355.
Fix crash during ICQ/AIM disconnection.

CCBUG: 181431



 M  +3 -0      connection.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=914356
Comment 4 Roman Jarosz 2009-01-20 23:58:03 UTC
*** Bug 176586 has been marked as a duplicate of this bug. ***
Comment 5 manolis 2009-01-21 00:00:55 UTC
for comment #1, Oops sorry, I just saw that I have and an ICQ account configured. 
Backtraces never lie... :-)
I had signed out... and the relogin... from SystemPanel->RightClick ->Set status
I noticed that it didn't logged in , so I pressed offline, online again ... and then it crashed.