Fix crash during ICQ/AIM disconnection.

BUG: 181431


svn path=/trunk/KDE/kdenetwork/kopete/; revision=914355